WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108951
[BlackBerry] Fix flicker on page load transitions
https://bugs.webkit.org/show_bug.cgi?id=108951
Summary
[BlackBerry] Fix flicker on page load transitions
Jakob Petsovits
Reported
2013-02-05 09:31:39 PST
The main idea for this patch is that whenever we adopt a new backingstore geometry that doesn't contain any rendered tiles, or VisibleZoom render jobs that need more tiles to be rendered to be considered complete, we'll then suspend blitting until there is valid content to show. This main idea is codified as checks for empty buffers in adoptAsFrontState(), and checks for the current state of the render queue after rendering content in render(). However, as BackingStore objects with disabled surface pools or pure use of accelerated compositing also swap geometries in some circumstances, the use of suspend counters grows increasingly fragile. To make this patch more resilient against regressions, the current suspend counter is complemented with several explicit conditions for suspending screen updates, and both subsequently combined into a single cached boolean value telling the UI thread whether or not to suspend. In the future, other suspend calls can be migrated to this "state machine" design as well, potentially phasing out the suspend counter altogether. The immediate result is that there will be no flashing of background color between page loads or after discarding tiles on scale changes until the content has been rendered. See patch below, with its commit message reused for the bug description above.
Attachments
Patch
(16.52 KB, patch)
2013-02-05 12:56 PST
,
Jakob Petsovits
no flags
Details
Formatted Diff
Diff
Patch, with Arvid added as internal reviewer
(16.57 KB, patch)
2013-02-07 07:41 PST
,
Jakob Petsovits
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jakob Petsovits
Comment 1
2013-02-05 09:34:46 PST
Err, [BlackBerry] prefix for the bug. Sorry.
Jakob Petsovits
Comment 2
2013-02-05 12:56:18 PST
Created
attachment 186681
[details]
Patch
Arvid Nilsson
Comment 3
2013-02-07 06:16:11 PST
Comment on
attachment 186681
[details]
Patch LGTM
Jakob Petsovits
Comment 4
2013-02-07 07:41:26 PST
Created
attachment 187109
[details]
Patch, with Arvid added as internal reviewer Only changed the hunk in ChangeLog.
Rob Buis
Comment 5
2013-02-07 07:58:08 PST
Comment on
attachment 187109
[details]
Patch, with Arvid added as internal reviewer LGTM.
WebKit Review Bot
Comment 6
2013-02-07 08:59:54 PST
Comment on
attachment 187109
[details]
Patch, with Arvid added as internal reviewer Clearing flags on attachment: 187109 Committed
r142137
: <
http://trac.webkit.org/changeset/142137
>
WebKit Review Bot
Comment 7
2013-02-07 08:59:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug